# do-sentinel

./: Cargo.toml  LICENSE  Makefile  README.md
contrib/: do-sentinel.service
src/: config.rs  main.rs  store.rs
src/collector/: auth.rs  connections.rs  cpu.rs  disk.rs  forensics.rs  loadavg.rs  memory.rs  mod.rs  network.rs  process.rs  security.rs
src/dashboard/: index.html
src/enrichment/: virustotal.rs
